--- a/rentx/package.json
+++ b/rentx/package.json
@@ -12,29 +12,31 @@
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
-    "expo": "~41.0.1",
-    "expo-app-loading": "^1.3.0",
-    "expo-font": "~9.1.0",
-    "expo-splash-screen": "~0.10.2",
-    "expo-updates": "~0.5.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "expo": "~43.0.2",
+    "expo-app-loading": "~1.2.1",
+    "expo-font": "~10.0.3",
+    "expo-splash-screen": "~0.13.5",
+    "expo-updates": "~0.10.13",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-screens": "~3.0.0",
-    "react-native-unimodules": "~0.13.3",
-    "react-native-web": "~0.13.12",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-screens": "~3.8.0",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.3",
     "babel-preset-expo": "~8.3.0",
     "jest-expo": "~41.0.0",
-    "typescript": "~4.0.0"
+    "react-native-svg-transformer": "^1.0.0",
+    "typescript": "~4.3.5"
   },
   "jest": {
     "preset": "react-native"
