--- a/rentx/package.json
+++ b/rentx/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "expo": "~43.0.2",
     "expo-app-loading": "~1.2.1",
     "expo-font": "~10.0.3",
@@ -25,6 +27,7 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
