--- a/rentx/package.json
+++ b/rentx/package.json
@@ -22,6 +22,7 @@
     "expo-font": "~10.0.3",
     "expo-splash-screen": "~0.13.5",
     "expo-updates": "~0.10.13",
+    "lottie-react-native": "4.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
