--- a/rentx/package.json
+++ b/rentx/package.json
@@ -30,8 +30,8 @@
     "intl": "^1.2.5",
     "lottie-ios": "3.2.3",
     "lottie-react-native": "4.1.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1271.0",
     "react-native-fast-image": "^8.5.11",
@@ -49,7 +49,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-decorators": "^7.16.5",
-    "@types/react": "~17.0.21",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
     "@types/react-native": "^0.66.11",
     "@types/react-native-calendars": "^1.1264.3",
     "@types/styled-components-react-native": "^5.1.3",
