--- a/gofinances/package.json
+++ b/gofinances/package.json
@@ -6,7 +6,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "start": "react-native start"
+    "start": "react-native start",
+    "test": "jest"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.0",
@@ -48,18 +49,15 @@
     "@babel/core": "^7.12.9",
     "@testing-library/jest-native": "^4.0.4",
     "@testing-library/react-native": "^9.1.0",
+    "@types/jest": "^27.5.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.3",
+    "jest": "^28.0.3",
     "jest-expo": "^44.0.1",
+    "jest-styled-components": "^7.0.8",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "setupFilesAfterEnv": [
-      "@testing-library/jest-native/extend-expect"
-    ]
   },
   "private": true
 }
