--- a/gofinances/package.json
+++ b/gofinances/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@testing-library/jest-native": "^4.0.4",
+    "@testing-library/react-hooks": "^8.0.0",
     "@testing-library/react-native": "^9.1.0",
     "@types/jest": "^27.5.0",
     "@types/react": "~17.0.21",
@@ -55,6 +56,7 @@
     "@types/styled-components-react-native": "^5.1.3",
     "jest": "^28.0.3",
     "jest-expo": "^44.0.1",
+    "jest-fetch-mock": "^3.0.3",
     "jest-styled-components": "^7.0.8",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
