--- a/gofinances/package.json
+++ b/gofinances/package.json
@@ -59,6 +59,7 @@
     "jest-fetch-mock": "^3.0.3",
     "jest-styled-components": "^7.0.8",
     "react-native-svg-transformer": "^1.0.0",
+    "ts-jest": "^28.0.1",
     "typescript": "~4.3.5"
   },
   "private": true
