--- a/gofinances/package.json
+++ b/gofinances/package.json
@@ -54,13 +54,16 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.3",
-    "jest": "^28.0.3",
+    "jest": "^27.4.5",
     "jest-expo": "^44.0.1",
     "jest-fetch-mock": "^3.0.3",
     "jest-styled-components": "^7.0.8",
     "react-native-svg-transformer": "^1.0.0",
-    "ts-jest": "^28.0.1",
+    "ts-jest": "^27.1.2",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "@jest/create-cache-key-function": "^27.0.1"
+  }
 }
