--- a/myskills/package.json
+++ b/myskills/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^17.0.37",
     "@types/react-native": "^0.66.8",
     "babel-jest": "^26.6.3",
+    "detox": "^19.6.7",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
