--- a/myskills/package.json
+++ b/myskills/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
+    "test": "detox test -c android.emu.debug",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -22,7 +22,7 @@
     "babel-jest": "^26.6.3",
     "detox": "^19.6.7",
     "eslint": "7.14.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.2",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.5.3"
