--- a/gofinances/app.json
+++ b/gofinances/app.json
@@ -5,9 +5,7 @@
     "version": "1.0.0",
     "icon": "./assets/icon.png",
     "scheme": "gofinances",
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "bundleIdentifier": "com.gofinances",
       "buildNumber": "1.0.0"
@@ -22,6 +20,7 @@
       "backgroundColor": "#4299E1"
     },
     "description": "",
-    "githubUrl": "https://github.com/FelipeBrenner/ignite-react-native/tree/master/gofinances"
+    "githubUrl": "https://github.com/FelipeBrenner/ignite-react-native/tree/master/gofinances",
+    "jsEngine": "jsc"
   }
 }
